test/files/neg/macro-invalidshape-a.check
Macros_Test_2.scala:2: error: macro body has wrong shape:
 required: Predef.macro(<reference to implementation object>.<implementation method name>)
 or      : Predef.macro(<implementation method name>)
  def foo(x: Any) = macro(2)
      ^
one error found
